# market-neutral-crypto-desk

./: .gitignore  CLAUDE.md  MISSION.md  README.md  SKILL.md  config.yaml  pyproject.toml
agents/: bear.md  bull.md  derivatives.md  factor_analyst.md  funding_carry.md  neutrality_constructor.md  pair_analyst.md  reflector.md  research_manager.md  risk_gate.md  sentiment.md  technical.md  trader.md  universe_scout.md
futures_fund/: __init__.py  account.py  beta.py  cointegration.py  config.py  contracts.py  control_loop.py  costs.py  cycle_io.py  cycle_prep.py  dashboard.py  equity_log.py  exchange.py  funding_intervals.py  graduation.py  improvement.py  journal.py  learning.py  lesson_miner.py  lesson_overlay.py  lessons.py  liquidation.py  market_context.py  market_data.py  metrics.py  models.py  monitor_book.py  neutrality.py  orchestration.py  pnl_attribution.py  policy.py  portfolio_risk.py  repair.py  returns_frame.py  reviewer.py  risk_gate.py  runlock.py  scheduling.py  scorecard.py  self_audit.py  (+7 more)
scripts/: control_loop_cli.py  cycle_prep_cli.py  dashboard_cli.py  due_check.py  gate_execute_cli.py  monitor_cli.py  preflight.py  promote_lesson_cli.py  record_lessons_cli.py  reflect_cli.py  repair_cli.py  reviewer_cli.py  run_paper_cli.py  runlock_cli.py  scout_cli.py  self_audit_cli.py  walk_forward_cli.py
tests/: conftest.py  test_account.py  test_account_integration.py  test_agent_conformance.py  test_agent_cost_artifacts.py  test_agent_cost_context.py  test_beta.py  test_cointegration.py  test_config.py  test_config_phase2.py  test_contracts.py  (+60 more)
(+33 files in other folders)
